# ai-problem-first-capstone

./: .env.example  .gitignore  README.md  build.sh  claude-decisions.md  initial-prompt.md  main.py  nixpacks.toml  pyproject.toml  railway.json
backend/: create_evaluation_dataset.py  evaluate_workflow.py  manage_cache.py  run_evaluation.py
backend/app/: cache.py  main.py  models.py  workflow_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
